--- a/src/styles.css
+++ b/src/styles.css
@@ -59,8 +59,8 @@ main {
   display: flex;
 }
 .weather-app-icon {
-  font-size: 44px;
-  margin-top: 22px;
+  width: 88px;
+  height: 88px;
 }
 .weather-app-temperature {
   font-size: 88px;
