--- a/src/styles.css
+++ b/src/styles.css
@@ -79,3 +79,30 @@ footer {
   font-size: 14px;
   color: rgba(0, 0, 0, 0.6);
 }
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+  display: flex;
+  justify-content: space-between;
+}
+
+.weather-forecast-date {
+  color: rgba(39, 33, 66, 0.4);
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+}
+.weather-forecast-icon {
+  display: block;
+  margin: 0 auto;
+  width: 88px;
+  height: 88px;
+}
+.weather-forecast-temperatures {
+  color: #f65282;
+  font-size: 15px;
+  text-align: center;
+}
+.weather-forecast-temperature-min {
+  opacity: 0.5;
+}
