--- a/src/styles.css
+++ b/src/styles.css
@@ -80,17 +80,17 @@ footer {
   color: rgba(0, 0, 0, 0.6);
 }
 .weather-forecast {
-  margin-top: 20px;
-  text-align: center;
+  margin-top: 30px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .weather-forecast-date {
-  color: rgba(39, 33, 66, 0.4);
   text-align: center;
+  color: rgba(39, 33, 66, 0.4);
   font-size: 16px;
-  font-weight: 500;
+  line-height: 20px;
+  margin-bottom: 10px;
 }
 .weather-forecast-icon {
   display: block;
@@ -99,10 +99,12 @@ footer {
   height: 88px;
 }
 .weather-forecast-temperatures {
-  color: #f65282;
-  font-size: 15px;
   text-align: center;
+  color: #f65282;
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
 }
-.weather-forecast-temperature-min {
-  opacity: 0.5;
+.weather-forecast-temperature {
+  padding: 0 10px;
 }
